<resources>
    <string name="app_name">Herd Assistant</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="group">Group: </string>
    <string name="not_chosen">Not chosen</string>
    <string name="barcode">Barcode</string>
    <string name="search_scan">Scan search</string>
    <string name="create_scan">Scan create</string>
    <string name="name">Name</string>
    <string name="note">Note</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="cowshed">Cowshed</string>
    <string name="show_cowshed">Show cowshed</string>
    <string name="team">Group</string>
    <string name="cattle">Cattle</string>
    <string name="type_text">Type</string>
    <string name="number_of_group">Number of groups: </string>
    <string name="number_of_cattle">Number of cattle: </string>
    <string name="info_add">Please fill all data</string>
    <string name="delete_team">Delete group</string>
    <string name="delete_cowshed">Delete cowshed</string>
    <string name="info_delete">Please delete all cattles</string>
    <string name="info_delete_cowshed">Please delete all groups</string>
    <string name="add_cattle">Add cattle</string>
    <string name="earring">Earring</string>
    <string name="sex">Sex</string>
    <string name="cowshed_number">Cowshed number</string>
    <string name="date">DD.MM.YYYY</string>
    <string name="birthDate">Birthday</string>
    <string name="joinDate">Join date</string>
    <string name="leaveDate">Leave date</string>
    <string name="leaveReason">Leave reason</string>
    <string name="scan_barcode">Scan barcode</string>
    <string name="focus_QR">Please focus camera to QR Code</string>
    <string name="show_request">Show request</string>
    <string name="map">Map</string>
    <string name="show_map">Show cowshed in map</string>
    <string name="my_location">My location</string>
    <string name="address">Village, House number, Postcode</string>
    <string name="update">Update</string>

    <array name="type_group">
        <item>Eat</item>
        <item>Sick</item>
    </array>
    <array name="type_sex">
        <item>XX</item>
        <item>XY</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
