<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_show_cowshed"
            android:title="@string/show_cowshed" />
    </group>

    <item android:title="@string/add">
        <menu>
            <item
                android:id="@+id/nav_add_cowshed"
                android:title="@string/cowshed" />
            <item
                android:id="@+id/nav_add_group"
                android:title="@string/team" />
        </menu>
    </item>

    <item android:title="@string/barcode">
        <menu>
            <item
                android:id="@+id/nav_barcode_search"
                android:title="@string/search_scan" />
        </menu>
    </item>

</menu>
