<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        tools:context=".saveModelFragments.CattleFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name_cattle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin24"
            android:gravity="center"
            android:hint="@string/name" />

        <EditText
            android:id="@+id/earring_cattle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin24"
            android:gravity="center"
            android:hint="@string/earring" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/margin16"
                android:layout_marginTop="@dimen/margin32"
                android:text="@string/sex"
                android:textSize="@dimen/size_text_normal" />

            <Spinner
                android:id="@+id/sex_cattle"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/margin32"
                android:layout_marginTop="@dimen/margin32"
                android:layout_marginEnd="@dimen/margin32"
                android:prompt="@array/type_sex" />

        </LinearLayout>

        <EditText
            android:id="@+id/cowshed_number_cattle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin24"
            android:gravity="center"
            android:inputType="number"
            android:hint="@string/cowshed_number" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin16"
            android:layout_marginTop="@dimen/margin32"
            android:text="@string/birthDate"
            android:textSize="@dimen/size_text_normal" />

        <EditText
            android:id="@+id/birth_date_cattle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin24"
            android:gravity="center"
            android:hint="@string/date" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin16"
            android:layout_marginTop="@dimen/margin32"
            android:text="@string/joinDate"
            android:textSize="@dimen/size_text_normal" />

        <EditText
            android:id="@+id/join_date_cattle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin24"
            android:gravity="center"
            android:hint="@string/date" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin16"
            android:layout_marginTop="@dimen/margin32"
            android:text="@string/leaveDate"
            android:textSize="@dimen/size_text_normal" />

        <EditText
            android:id="@+id/leave_date_cattle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin24"
            android:gravity="center"
            android:hint="@string/date" />

        <EditText
            android:id="@+id/leave_reason_cattle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin24"
            android:gravity="center"
            android:hint="@string/leaveReason"
            android:singleLine="false" />

        <EditText
            android:id="@+id/note_cattle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin24"
            android:gravity="center"
            android:hint="@string/note"
            android:singleLine="false" />

        <Button
            android:id="@+id/save_cattle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin32"
            android:text="@string/save"
            android:textSize="@dimen/size_text_normal" />

    </LinearLayout>
</ScrollView>
