<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".saveModelFragments.CowshedFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name_cowshed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin24"
            android:gravity="center"
            android:hint="@string/name" />

        <EditText
            android:id="@+id/address_cowshed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin16"
            android:gravity="center"
            android:hint="@string/address" />

        <EditText
            android:id="@+id/note_cowshed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin16"
            android:gravity="center"
            android:hint="@string/note"
            android:singleLine="false" />

        <Button
            android:id="@+id/save_cowshed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textSize="@dimen/size_text_normal" />

    </LinearLayout>
</ScrollView>