<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".saveModelFragments.TeamFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name_team"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin24"
            android:gravity="center"
            android:hint="@string/name" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin16"
            android:layout_marginTop="@dimen/margin32"
            android:text="@string/type_text"
            android:textSize="@dimen/size_text_normal" />

        <Spinner
            android:id="@+id/type_team"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin32"
            android:prompt="@array/type_group" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin16"
            android:layout_marginTop="@dimen/margin32"
            android:text="@string/cowshed"
            android:textSize="@dimen/size_text_normal" />

        <Spinner
            android:id="@+id/cowshed_team"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin32" />

        <Button
            android:id="@+id/save_team"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin32"
            android:text="@string/save"
            android:textSize="@dimen/size_text_normal" />

    </LinearLayout>
</ScrollView>